--- a/.github/workflows/bsky_bot.yml
+++ b/.github/workflows/bsky_bot.yml
@@ -2,7 +2,7 @@ name: Bluesky bot
 
 on:
   schedule:
-    - cron: '0 * * * *'     # 毎時実行（UTC）
+    - cron: '0 3 * * *'     # 毎時実行（UTC）
   workflow_dispatch:        # 手動実行も可能
 
 jobs:
